--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>Privacy Policy</h1>
     <p>This is a test app used for internal testing purposes only. No data is stored or shared.</p>
-    <p>Contact: test@example.com</p>
+    <p>Contact: meetnileshjadhav@gmail.com</p>
   </body>
 </html>
